test/lastuse9.slq

def main(){
	x:=0:ğ”¹;
	y:=0:ğ”¹;
	if x{ x=y; }
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	if x{ k=y; } /// error
	return y;
}
